--- a/src/index.html
+++ b/src/index.html
@@ -276,26 +276,25 @@
             </a>
           </div>
         </div>
-        <div class="info">
-          <div class="info__schedules">
-            <p class="info__title">Графік роботи</p>
-            <p><strong>12:00 - 20:00 </strong>середа</p>
-            <p><strong>12:00 - 20:00 </strong>четвер</p>
-            <p><strong>12:00 - 20:00 </strong>п'ятниця</p>
-            <p><strong>11:00 - 19:00 </strong>субота</p>
-            <p><strong>11:00 - 19:00 </strong>неділя</p>
-            <p class="info__subscription">
-              Вихідні понеділок, вівторок <br>
-              Каса припиняє роботу за 1 годину до закриття музею
-            </p>
-          </div>
-          <div class="info__contacts">
-            <p class="info__title">Контакти:</p>
-            <a class="info__link" href="#">вул. М. Грушевського, 6;<br>Київ, 01001</a> <br>
-            <a class="info__link" href="#">тел. +38 (044) 278-13-57</a> <br>
-            <a class="info__link" href="#">факс +38 (044) 278-74-54</a> <br>
-            <a class="info__link" href="#">e-mail: info@namu.kiev.ua</a> <br>
-          </div>
+
+        <div class="info__schedules">
+          <p class="info__title">Графік роботи</p>
+          <p><strong>12:00 - 20:00 </strong>середа</p>
+          <p><strong>12:00 - 20:00 </strong>четвер</p>
+          <p><strong>12:00 - 20:00 </strong>п'ятниця</p>
+          <p><strong>11:00 - 19:00 </strong>субота</p>
+          <p><strong>11:00 - 19:00 </strong>неділя</p>
+          <p class="info__subscription">
+            Вихідні понеділок, вівторок <br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+        <div class="info__contacts">
+          <p class="info__title">Контакти:</p>
+          <a class="info__link" href="#">вул. М. Грушевського, 6;<br>Київ, 01001</a> <br>
+          <a class="info__link" href="#">тел. +38 (044) 278-13-57</a> <br>
+          <a class="info__link" href="#">факс +38 (044) 278-74-54</a> <br>
+          <a class="info__link" href="#">e-mail: info@namu.kiev.ua</a> <br>
         </div>
 
         <div class="links">
@@ -313,10 +312,11 @@
             <a href="links__link">Контакти</a>
           </div>
         </div>
-
       </section>
-      <p class="bottom__description">Designed by Zhyriada Marina</p>
-      <p class="bottom__subscription">Copyright © 2019. All Rights Reserved.</p>
+      <div class="bottom__basement">
+        <p class="bottom__description">Designed by Zhyriada Marina</p>
+        <p class="bottom__subscription">Copyright © 2019. All Rights Reserved.</p>
+      </div>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
