changes except menu logic

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       type="image/x-icon"
       href="images/icons8-puzzle-30.png"
     >
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="main-content">
@@ -146,7 +146,7 @@
             placeholder="E-mail"
           >
             <button
-              type = "reset"
+              type = "submit"
               class = "main-photo-footer__button"
             >
               &#10095;
