--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@
     </main>
 
     <footer class="footer">
-      <section class="footer__top">
+      <section class="footer__follow">
         <h3 class="footer__title">
           Підписка
         </h3>
@@ -296,6 +296,8 @@
           <a class="info__link" href="#">факс +38 (044) 278-74-54</a> <br>
           <a class="info__link" href="#">e-mail: info@namu.kiev.ua</a> <br>
         </div>
+
+        <div class="line"></div>
 
         <div class="links">
           <div class="links__left">
