--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,14 @@
       </a>
     </div>
     <header class="page__section header" id="header">
+      <div class="header__events">
+        <p>
+            ПОДІЇ
+        </p>
+      </div>
+    </header>
+
+    <section class="top">
       <div class="desktop-wrapper">
         <h1 class="header__title">ХУДОЖ<span class="transparent">НІЙ</span> МУЗЕЙ</h1>
         <form class="form">
@@ -46,12 +54,7 @@
           </button>
         </form>
       </div>
-      <div class="header__events">
-        <p>
-            ПОДІЇ
-        </p>
-      </div>
-    </header>
+    </section>
     <div class="header__header-image"></div>
 
     <nav class="page__menu menu" id="menu">
@@ -301,22 +304,40 @@
     <footer class="page__section footer" id="footer">
       <div class="footer-wrapper">
         <div class="logo-wrapper">
-          <img
-            class="footer__NAMU-logo"
-            src="/images/logo.svg"
-            alt=""
+          <a
+            href="http://namu.kiev.ua/ua.html"
+            target="_blank"
+            rel="noopener"
           >
+            <img
+              class="footer__NAMU-logo"
+              src="/images/logo.svg"
+              alt=""
+            >
+          </a>
           <div class="tablet-wrapper">
-            <img
-              class="footer__Facebook-logo"
-              src="/images/Facebook.svg"
-              alt=""
+            <a
+              href="https://www.facebook.com/namu.museum/"
+              target="_blank"
+              rel="noopener"
             >
-            <img
-              class="footer__Instagram-logo"
-              src="/images/Instagram.svg"
-              alt=""
+              <img
+                class="footer__Facebook-logo"
+                src="/images/Facebook.svg"
+                alt=""
+              >
+            </a>
+            <a
+              href="https://www.instagram.com/namu.museum/?hl=ru"
+              target="_blank"
+              rel="noopener"
             >
+              <img
+                class="footer__Instagram-logo"
+                src="/images/Instagram.svg"
+                alt=""
+              >
+            </a>
           </div>
         </div>
         <div class="info-wrapper">
