--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,10 @@
           alt="menu-icon"
         >
       </a>
-      <div class="image-container">
-        <div class="title-container">
-          <h1 class="image__title">na<br>mu</h1>
-        </div>
-      </div>
+      <div class="image-container"></div>
+      <h1 class="header__title">na<br>mu</h1>
 
-      <h1 class="page__title">Художній музей</h1>
+      <h1 class="page__title">Худож<span class="page__title-piece">ній</span> музей</h1>
 
       <div class="buy-container">
         <a
@@ -115,13 +112,11 @@
       </section>
 
       <section class="main__middle">
-        <div class="main__image_container">
-          <img
-            class="main__image"
-            src="./images/center.jpg"
-            alt="sunrise"
-          >
-        </div>
+        <img
+          class="main__image"
+          src="./images/center.jpg"
+          alt="sunrise"
+        >
 
         <div class="announcement">
           <div class="announcement__subscriptions">
