--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700;800&family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="page">
     <header class="capital">
       <div class="capital__information">
+        <img
+          src="images/Vector-menu.svg"
+          alt="Menu toggler"
+          class="capital__toggler"
+          id="togller"
+        >
         <h1 class="capital__title">
           худож<span class="capital__title--empty">ній</span><br>музей
         </h1>
@@ -27,6 +33,39 @@
         >
       </div>
     </header>
+    <nav class="nav nav--position">
+      <img
+        src="./images/NA_MU.png"
+        class="logo nav__logo"
+        alt="logo namu"
+      >
+      <ul class="nav__list nav__list--position">
+        <li class="nav__item">
+          <a href="#gallery" class="nav__link">Галерея</a>
+        </li>
+        <li class="nav__item">
+          <a href="#events" class="nav__link">Виставки та події</a>
+        </li>
+        <li class="nav__item">
+          <a href="#tickets" class="nav__link">Відвідування</a>
+        </li>
+        <li class="nav__item">
+          <a href="#email" class="nav__link">Стати нашим другом</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Про Нас</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Магазин</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Блог</a>
+        </li>
+        <li class="nav__item">
+          <a href="#contacts" class="nav__link">Контакти</a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <div class="container">
         <section class="events">
@@ -250,6 +289,6 @@
         </section>
       </div>
     </footer>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
