--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <div class="page__bg"></div>
     <header class="header">
+      <div class="header__bg"></div>
       <div class="container page__container">
         <div class="header__content">
           <div class="top-action">
@@ -44,6 +44,55 @@
         </div>
       </div>
     </header>
+    <main class="main">
+      <section class="current-events">
+        <div class="container page__container">
+          <h2 class="page__section-title">Актуальні події</h2>
+          <article class="event current-events__event">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--1-7">
+                <div class="event__photo-container">
+                  <img
+                    class="event__photo"
+                    src="./images/event1.jpg"
+                    alt="picture"
+                  >
+                </div>
+              </div>
+              <div class="grid__item grid__item--9-12">
+                <div class="event__schedule">
+                  <span class="event__name">ВИСТАВКА</span>
+                  <span class="event__date">26.08-29.11.2019</span>
+                </div>
+                <h3 class="event__title">Йду і повертаюсь</h3>
+                <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </div>
+          </article>
+          <article class="event current-events__event">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--1-4">
+                <div class="event__schedule">
+                  <span class="event__name">ВИСТАВКА</span>
+                  <span class="event__date">26.08-29.11.2019</span>
+                </div>
+                <h3 class="event__title">І спогади і мрії</h3>
+                <p class="event__description">Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+              <div class="grid__item grid__item--6-12">
+                <div class="event__photo-container">
+                  <img
+                    class="event__photo"
+                    src="./images/event2.jpg"
+                    alt="picture"
+                  >
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
