--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,342 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+
+    <main class="page">
+      <!-- menu  -->
+
+      <nav class="menu" id="menu">
+        <div class="container menu__container">
+          <ul class="menu__list">
+            <li class="logo menu__logo">
+              <a href="#">
+                NA
+                <br>
+                MU
+              </a>
+            </li>
+            <li class="menu__link"><a href="#">Галерея</a></li>
+            <li class="menu__link"><a href="#"> Виставки та події</a></li>
+            <li class="menu__link"><a href="#">Відвідування</a></li>
+            <li class="menu__link"><a href="#">Стати нашим другом</a></li>
+            <li class="menu__link"><a href="#">Про Нас</a></li>
+            <li class="menu__link"><a href="#">Магазин</a></li>
+            <li class="menu__link"><a href="#">Блог</a></li>
+            <li class="menu__link"><a href="#">Контакти</a></li>
+          </ul>
+          <form
+            action=""
+            method="GET"
+            class="menu__search"
+          >
+            <input
+              type="text"
+              class="menu__search-input"
+              id="search-input"
+            >
+          </form>
+        </div>
+      </nav>
+
+      <!-- nav -->
+      <nav class="nav nav--open container">
+        <!-- <a href="#menu" class="nav__icon nav__icon--close"></a> -->
+        <a href="#menu" class="nav__icon nav__icon--open"></a>
+
+        <a href="#" class="logo nav__logo">
+          NA
+          <br>
+          MU
+        </a>
+      </nav>
+
+      <!-- header -->
+      <header class="header">
+        <div class="header__photo">
+          <div class="header__info">
+            <h1 class="header__title">
+              ХУДОЖ<span class="header__stroke">НІЙ</span>
+              <br>
+              МУЗЕЙ
+            </h1>
+            <div class="two-buttons header__buttons">
+              <a href="" class="two-buttons__buy">КВИТКИ</a>
+              <a href="#" class="button-arrow"></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="container header__container">
+          <div class="contents-sign">
+            <div class="contents-sign__line"></div>
+            <p class="contents-sign__events">ПОДІЇ</p>
+          </div>
+        </div>
+      </header>
+
+      <!-- actual -->
+      <section class="actual page__section">
+        <div class="container">
+          <h2 class="page__subtitle">
+            Актуальні події
+          </h2>
+          <!-- card1 -->
+          <div class="event-card actual__card ">
+            <div class="grid grid--except-mobile">
+              <img
+                src="./images/actual1.png"
+                alt=""
+                class="event-card__photo grid__item grid__item--tablet--1-6 grid__item--desktop--1-7 grid__item--large--1-9">
+              <div
+                class="event-card__info grid__item grid__item--tablet--1-3 grid__item--desktop--9-12 grid__item--large--11-14">
+                <div class="event-card__details event-details">
+                  <span class="event-details__exhibition">
+                    ВИСТАВКА
+                  </span>
+                  <span class="event-details__date">
+                    26.08-29.11.2019
+                  </span>
+                </div>
+                <h3 class="event-card__name">
+                  Йду і повертаюсь
+                </h3>
+                <p class="event-card__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+
+            </div>
+          </div>
+          <!-- card2 -->
+          <div class="event-card actual__card">
+            <div class="grid grid--except-mobile">
+              <img
+                src="./images/actual2.png"
+                alt=""
+                class="event-card__photo grid__item grid__item--tablet--1-6 grid__item--desktop--6-12 grid__item--large--8-16 grid__item--order_2">
+              <div
+                class="event-card__info grid__item grid__item--tablet--1-3 grid__item--desktop--1-4 grid__item--large--3-6">
+                <div class="event-card__details event-details">
+                  <span class="event-details__exhibition">
+                    ВИСТАВКА
+                  </span>
+                  <span class="event-details__date">
+                    26.08-29.11.2019
+                  </span>
+                </div>
+                <h3 class="event-card__name">
+                  І спогади і мрії
+                </h3>
+                <p class="event-card__text">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <!-- card3 -->
+        <div class="lection-card grid--desktop-only">
+          <div class="lection-card__background">
+          </div>
+          <div class="lection-card__lection-info container">
+            <div class="lection-card__details event-details">
+              <span class="event-details__exhibition">
+                ЛЕКЦІЯ
+              </span>
+              <span class="event-details__date">
+                26.11.2019 - 11:00
+              </span>
+            </div>
+            <h3 class="lection-card__name">
+              Від&nbspкласицизму до&nbspромантизму
+            </h3>
+
+          </div>
+        </div>
+      </section>
+
+      <!-- gallery -->
+      <section class="gallery page__section">
+        <div class="container">
+          <h2 class="page__subtitle">
+            Галерея
+          </h2>
+          <!-- mobile slides -->
+          <div class="gallery__slides">
+            <span class="gallery__slide--1" id="slide--1"></span>
+            <span class="gallery__slide--2" id="slide--2"></span>
+            <span class="gallery__slide--3" id="slide--3"></span>
+            <span class="gallery__slide--4" id="slide--4"></span>
+
+            <div class="gallery__images">
+              <img
+                src="./images/gallery1.png"
+                alt=""
+                class="gallery__image"
+              >
+              <img
+                src="./images/gallery2.png"
+                alt=""
+                class="gallery__image"
+              >
+              <img
+                src="./images/gallery3.png"
+                alt=""
+                class="gallery__image"
+              >
+              <img
+              src="./images/gallery4.png"
+              alt=""
+              class="gallery__image"
+            >
+            </div>
+          </div>
+          <div class="gallery__buttons">
+            <a href="#slide--1" class="gallery__button gallery__button--is-active"></a>
+            <a href="#slide--2" class="gallery__button"></a>
+            <a href="#slide--3" class="gallery__button"></a>
+            <a href="#slide--4" class="gallery__button"></a>
+          </div>
+
+          <!-- desktop -->
+          <div class="gallery__desktop">
+            <div class="grid grid--desktop-only">
+              <img
+                src="./images/gallery1.png"
+                alt=""
+                class="grid__item grid__item--1-4 gallery__img-desktop">
+              <img
+                src="./images/gallery2.png"
+                alt=""
+                class="grid__item grid__item--5-12 gallery__img-desktop"
+              >
+              <img
+                src="./images/gallery3.png"
+                alt=""
+                class="grid__item grid__item--large--13-16 gallery__img-desktop"
+              >
+              <img
+                src="./images/gallery4.png"
+                alt=""
+                class="grid__item grid__item--1-8 gallery__img-desktop"
+              >
+              <img
+                src="./images/gallery5.png"
+                alt=""
+                class="grid__item grid__item--9-12 gallery__img-desktop"
+              >
+              <img
+                src="./images/gallery6.png"
+                alt=""
+                class="grid__item grid__item--large--13-16 gallery__img-desktop"
+              >
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+      <!-- subscribe -->
+      <section class="subscribe page__section">
+        <div class="subscribe__photo">
+          <div class="container">
+            <h3 class="page__subtitle page__subtitle--subscribe">
+              Підписка
+            </h3>
+            <p class="subscribe__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <div class="subscribe__input-field">
+              <input
+                class="subscribe__input"
+                type="email"
+                name="email"
+                placeholder="E-mail">
+              <button type="submit" class="button-arrow button-arrow--orange"></button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container grid">
+        <div class="footer__icons grid__item grid__item--mobile--1-2 grid__item--tablet--1-1">
+          <p class="logo footer__logo">
+            NA
+            <br>
+            MU
+          </p>
+
+          <div class="footer__icons">
+            <a href="" class="footer__media-link"><img src="./images/Facebook.png" alt="facebook icon"></a>
+            <a href="" class="footer__media-link"><img src="./images/instagram (3).png" alt="instagram icon"></a>
+          </div>
+        </div>
+        <section class="footer__working-hours grid__item grid__item--tablet--2-3 grid__item--desktop--3-4">
+          <p class="footer__working-title">Графік роботи</p>
+          <ul class="footer__working-list">
+            <li><span class="footer__important"> 12:00 — 20:00 </span>середа</li>
+            <li><span class="footer__important"> 12:00 — 20:00 </span>четвер</li>
+            <li><span class="footer__important"> 12:00 — 20:00 </span>п’ятниця</li>
+            <li><span class="footer__important"> 11:00 — 19:00 </span>субота</li>
+            <li><span class="footer__important"> 11:00 — 19:00 </span>неділя</li>
+          </ul>
+          <p class="footer__working-description">
+            <span class="footer__important">Вихідні</span> понеділок, вівторок.
+            <br>
+              Каса припиняє роботу за&nbsp;1 годину
+              до закриття музею
+          </p>
+        </section>
+
+        <p class="footer__details grid__item grid__item--tablet--4-5 grid__item--desktop--5-6 grid__item--large--6-7">
+          Контакти:
+          <br> <br>
+          вул. М. Грушевського, 6; Київ, 01001
+          тел. +38 (044) 278-13-57
+          факс +38 (044) 278-74-54
+          e-mail: info@namu.kiev.ua
+        </p>
+
+        <a href="#" class="button-mobl-up grid__item grid__item--mobile--2-2 grid__item--just-self_right"></a>
+        <div class="footer__line grid__item grid__item--mobile--1-2 grid__item--tablet--2-5 grid__item--desktop--7-7">
+        </div>
+        <ul class="footer__nav grid__item grid__item--tablet--2-3 grid__item--desktop--8-9 grid__item--large--10-11">
+          <li class="footer__links"><a href="#">Галерея</a></li>
+          <li class="footer__links"><a href="#"> Виставки та події</a></li>
+          <li class="footer__links"><a href="#">Відвідування</a></li>
+          <li class="footer__links"><a href="#">Стати нашим другом</a></li>
+        </ul>
+        <ul class="footer__nav grid__item grid__item--just-self_right grid__item--desktop--10-10 grid__item--large--13-13">
+          <li class="footer__links"><a href="#">Про Нас</a></li>
+          <li class="footer__links"><a href="#">Магазин</a></li>
+          <li class="footer__links"><a href="#">Блог</a></li>
+          <li class="footer__links"><a href="#">Контакти</a></li>
+        </ul>
+        <div class="footer__secondary-text grid__item grid__item--mobile--1-2 grid__item--tablet--1-6 grid__item--desktop--1-12 grid__item--desktop--1-16">
+          <p class="footer__design-details">
+            Designed by Zhyriada Marina
+          </p>
+          <p>
+            Copyright © 2019. All Rights Reserved.
+          </p>
+
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
