Footer was done

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="icon" href="./images/favicon.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
@@ -65,7 +66,7 @@
       </ul>
     </nav>
 
-    <header class="page__content header">
+    <header class="page__content header" id="header">
       <a href="#nav" class="header__menu">
         <img
         src="./images/burger.svg"
@@ -121,7 +122,7 @@
       >
         <h2 class="actual-events__title">Актуальні події</h2>
         <div class="actual-events__event">
-          <div class="grid grid--desctop">
+          <div class="grid">
             <div class="grid__item--1-7">
               <picture>
                 <source media="(min-width: 1025px)" srcset="./images/actual-events1/actual-events3.png">
@@ -152,7 +153,7 @@
         </div>
 
         <div class="actual-events__event">
-          <div class="grid grid--desctop">
+          <div class="grid">
             <div class="grid__item--6-12">
               <picture>
                 <source media="(min-width: 1025px)" srcset="./images/actual-events2/actual-events3.png">
@@ -274,7 +275,7 @@
         </div>
       </section>
 
-      <section class="subscribe" id="subscribe">
+      <section class="page__subscribe subscribe" id="subscribe">
         <div class="subscribe__block">
           <div class="subscribe__title">Підписка</div>
           <div class="subscribe__text">
@@ -298,6 +299,162 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer page__content grid grid--footer">
+      <div
+        class="footer__soc-media grid__item grid__item--1-1 grid__item--phone-1-2 grid__item--tablet-1-1"
+        id="blog"
+      >
+        <div class="namu">
+          NA
+          <br>
+          MU
+        </div>
+
+        <div class="footer__soc-media-img">
+          <a
+            href="https://uk-ua.facebook.com/"
+            rel="noopener"
+            target="_blank"
+          >
+            <img src="./images/Facebook.svg" alt="facebook">
+          </a>
+
+          <a
+            href="https://www.instagram.com/?hl=ru"
+            rel="noopener"
+            target="_blank"
+          >
+            <img src="./images/Instagram.svg" alt="instagram">
+          </a>
+        </div>
+      </div>
+
+      <div
+        class="footer__shedule grid__item grid__item--3-4 grid__item--tablet-2-3"
+        id="attendance"
+      >
+        <div class="footer__title"> Графік роботи </div>
+        <ul class="footer__working-days">
+          <li class="footer__working-day">
+            <span class="footer__important">12:00 — 20:00</span> середа
+          </li>
+          <li class="footer__working-day">
+            <span class="footer__important">12:00 — 20:00 </span>четвер
+          </li>
+          <li class="footer__working-day">
+            <span class="footer__important">12:00 — 20:00 </span>п’ятниця
+          </li>
+          <li class="footer__working-day">
+            <span class="footer__important">11:00 — 19:00 </span>субота
+          </li>
+          <li class="footer__working-day">
+            <span class="footer__important">11:00 — 19:00 </span>неділя
+          </li>
+        </ul>
+        Вихідні понеділок, вівторок
+        <br>
+        Каса припиняє роботу за 1 годину
+        до закриття музею
+      </div>
+
+      <div
+        class="footer__contacts-block grid__item grid__item--5-6 grid__item--tablet-4-5"
+        id="contacts"
+      >
+        <div class="footer__title">
+          Контакти
+        </div>
+
+        <div>
+          <a
+            href="https://goo.gl/maps/P1XdMGSBmhy2dxAz8"
+            rel="noopener"
+            target="_blank"
+            class="footer__contacts-link"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <br>
+          <a
+            href="tel:+38 (044) 278-13-57"
+            class="footer__contacts-link"
+          >
+            тел. +38 (044) 278-13-57
+          </a>
+          <br>
+          <a
+            href="tel:+38 (044) 278-74-54"
+            class="footer__contacts-link"
+          >
+            факс +38 (044) 278-74-54
+          </a>
+          <br>
+          <a
+            href="mailto:info@namu.kiev.ua"
+            rel="noopener"
+            target="_blank"
+            class="footer__contacts-link"
+          >
+            e-mail: info@namu.kiev.ua
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__line grid__item grid__item--phone-1-2 grid__item--tablet-2-5">
+        <a href="#header" class="footer__go-home"></a>
+      </div>
+
+      <div class="grid__item grid__item--8-9 grid__item--tablet-2-3">
+        <ul class="footer__nav-items">
+          <li class="footer__nav-item">
+            <a href="#gallery" class="footer__nav-link">
+              Галерея
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#events" class="footer__nav-link">
+              Виставка та події
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#attendance" class="footer__nav-link">
+              Відвідування
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#subscribe" class="footer__nav-link">
+              Стати нашим другом
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="grid__item grid__item--10-10 grid__item--tablet-4-4">
+        <ul class="footer__nav-items">
+          <li class="footer__nav-item">
+            <a href="#about-us" class="footer__nav-link">
+              Про нас
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#shop" class="footer__nav-link">
+              Магазин
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#blog" class="footer__nav-link">
+              Блог
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#contacts" class="footer__nav-link">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
