--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,11 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header">
-      <div class="header__bg"></div>
+    <header class="header page__header">
+      <div class="header__photo">
+        <img class="header__img" src="./images/museum.jpg" alt="photo">
+        <h1 class="header__title-stroke">ній</h1>
+      </div>
       <div class="container page__container">
         <div class="header__content">
           <div class="top-action">
@@ -35,31 +38,44 @@
               MU
             </a>
           </div>
-          <h1 class="header__title">
-            Художній
-            <br>
-            музей
-          </h1>
-          <a class="btn btn--header">Квитки</a>
+          <div class="header__bottom">
+            <div class="header__bottom-container">
+              <h1 class="header__title header__title--onMobile">
+                Художній
+                <br>
+                музей
+              </h1>
+              <h1 class="header__title header__title--onDesktop">
+                Худож
+                <br>
+                музей
+              </h1>
+              <div class="button">
+                <a class="btn header__btn btn--header">Квитки</a>
+                <a class="btn-arrow" href="#"></a> 
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="header__mark">
+          <span class="header__mark-line"></span>
+          <span class="header__mark-text">ПОДІЇ</span>
         </div>
       </div>
     </header>
-    <main class="main">
+    <!-- <main class="main">
       <section class="current-events">
         <div class="container page__container">
           <h2 class="page__section-title">Актуальні події</h2>
           <article class="event current-events__event">
-            <div class="grid grid--desktop">
-              <div class="grid__item grid__item--1-7">
-                <div class="event__photo-container">
-                  <img
-                    class="event__photo"
-                    src="./images/event1.jpg"
-                    alt="picture"
-                  >
-                </div>
+              <div class="event__img">
+                <img
+                  class="event__photo"
+                  src="./images/event1.jpg"
+                  alt="picture"
+                >
               </div>
-              <div class="grid__item grid__item--9-12">
+              <div class="event-description">
                 <div class="event__schedule">
                   <span class="event__name">ВИСТАВКА</span>
                   <span class="event__date">26.08-29.11.2019</span>
@@ -67,11 +83,12 @@
                 <h3 class="event__title">Йду і повертаюсь</h3>
                 <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
               </div>
-            </div>
+                
+              
           </article>
           <article class="event current-events__event">
             <div class="grid grid--desktop">
-              <div class="grid__item grid__item--1-4">
+              <div class="grid__item grid__item--1-4 ">
                 <div class="event__schedule">
                   <span class="event__name">ВИСТАВКА</span>
                   <span class="event__date">26.08-29.11.2019</span>
@@ -92,7 +109,7 @@
           </article>
         </div>
       </section>
-    </main>
+    </main> -->
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
