--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,11 @@
   <body class="page__body">
     <header class="header page__header">
       <div class="header__photo">
-        <img class="header__img" src="./images/museum.jpg" alt="photo">
+        <img
+          class="header__img"
+          src="./images/museum.jpg"
+          alt="photo"
+        >
         <h1 class="header__title-stroke">ній</h1>
       </div>
       <div class="container page__container">
@@ -51,8 +55,11 @@
                 музей
               </h1>
               <div class="button">
-                <a class="btn header__btn btn--header">Квитки</a>
-                <a class="btn-arrow" href="#"></a> 
+                <a
+                  class="btn header__btn btn--header">
+                    Квитки
+                </a>
+                <a class="btn-arrow" href="#"></a>
               </div>
             </div>
           </div>
@@ -83,8 +90,6 @@
                 <h3 class="event__title">Йду і повертаюсь</h3>
                 <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
               </div>
-                
-              
           </article>
           <article class="event current-events__event">
             <div class="grid grid--desktop">
