--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin=""
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__nav">
+        <a href="#" class="header__menu-opener"></a>
+        <a href="#" class="logo">
+          <span class="logo__txt">
+            na
+            <br>
+            mu
+          </span>
+        </a>
+      </div>
+    </header>
+
+    <section class="art-museum">
+      <h1 class="art-museum__name">
+        ХУДОЖНІЙ МУЗЕЙ
+      </h1>
+      <div class="art-museum__button button">
+        <div class="button__tickets">
+          КВИТКИ
+        </div>
+        <div class="button__square">
+          <img
+            class="button__txt"
+            src="./images/tiket.svg"
+            alt=">"
+          >
+        </div>
+      </div>
+    </section>
+
+    <section class="relevant-events">
+      <h2 class="relevant-events__name">
+        Актуальні події
+      </h2>
+      <div class="relevant-events__block">
+        <img
+          class="relevant-events__img"
+          src="./images/photo01.png"
+          alt=""
+        >
+        <div class="relevant-events__exb">
+          <span class="relevant-events__left">ВИСТАВКА</span>
+          <span class="relevant-events__right">26.08-29.11.2019</span>
+        </div>
+        <h3 class="relevant-events__name-exb">Йду і повертаюсь</h3>
+        <p class="relevant-events__content">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+
+        <img
+          class="relevant-events__img"
+          src="./images/photo02.png"
+          alt=""
+        >
+        <div class="relevant-events__exb">
+          <span class="relevant-events__left">ВИСТАВКА</span>
+          <span class="relevant-events__right">26.08-29.11.2019</span>
+        </div>
+        <h3 class="relevant-events__name-exb">І спогади і мрії</h3>
+        <p class="relevant-events__content">
+          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+        </p>
+      </div>
+    </section>
+
+    <section class="classicism">
+      <img
+        class="classicism__img"
+        src="./images/photo03.png"
+        alt="classicism"
+      >
+      <div class="classicism__lecture">
+        <div class="classicism__block">
+          <span class="classicism__left">ЛЕКЦІЯ</span>
+          <span class="classicism__right">26/08/2019 - 11:00</span>
+        </div>
+        <h3 class="classicism__info">Від класицизму до романтизму</h3>
+      </div>
+    </section>
+
+    <section class="gallery">
+      <h2 class="gallery__name">Галерея</h2>
+      <img
+        src="./images/g01.png"
+        alt="gallery"
+        class="gallery__img"
+      >
+      <img
+        src="./images/Group 17.9.svg"
+        alt="slider"
+        class="gallery__slider"
+      >
+    </section>
+
+    <section class="=subscription">
+      <div class="subscription__block">
+        <div class="button button--email">
+          <div class="button__tickets button__tickets--email">
+            E-mail
+          </div>
+          <div class="button__square button__square--email">
+            <img
+              class="button__txt button__txt--email"
+              src="./images/tiket__black.svg"
+              alt=">"
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
