Hover effects were changed

--- a/src/index.html
+++ b/src/index.html
@@ -359,7 +359,7 @@
       </div>
 
       <div
-        class="footer__contacts-block grid__item grid__item--5-6 grid__item--tablet-4-5"
+        class="grid__item grid__item--5-6 grid__item--tablet-4-5"
         id="contacts"
       >
         <div class="footer__title">
