Navigation and hover effects for soc-media were changed

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
           </a>
         </li>
         <li class="nav__item">
-          <a href="#attendance" class="nav__link">
+          <a href="#lecture" class="nav__link">
             Відвідування
           </a>
         </li>
@@ -44,7 +44,7 @@
           </a>
         </li>
         <li class="nav__item">
-          <a href="#about-us" class="nav__link">
+          <a href="#subscribe" class="nav__link">
             Про нас
           </a>
         </li>
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li class="nav__item">
-          <a href="#blog" class="nav__link">
+          <a href="#subscribe" class="nav__link">
             Блог
           </a>
         </li>
@@ -101,7 +101,7 @@
           музей
         </h1>
 
-        <a href="#" class="page__content art-museum-button art-museum__button">
+        <a href="#events" class="page__content art-museum-button art-museum__button">
           <div class="art-museum-button__text">
             квитки
           </div>
@@ -184,7 +184,7 @@
         </div>
       </section>
 
-      <section class="page__content lecture">
+      <section class="page__content lecture" id="lecture">
         <picture>
           <source media="(min-width: 1025px)" srcset="./images/lecture/lecture3.png">
           <source media="(min-width: 768px)" srcset="./images/lecture/lecture2.png">
@@ -313,19 +313,19 @@
 
         <div class="footer__soc-media-img">
           <a
-            href="https://uk-ua.facebook.com/"
+            href="https://www.facebook.com/namu.museum/"
             rel="noopener"
             target="_blank"
+            class="footer__facebook"
           >
-            <img src="./images/Facebook.svg" alt="facebook">
           </a>
 
           <a
-            href="https://www.instagram.com/?hl=ru"
+            href="https://www.instagram.com/namu.museum/?hl=ru"
             rel="noopener"
             target="_blank"
+            class="footer__instagram"
           >
-            <img src="./images/Instagram.svg" alt="instagram">
           </a>
         </div>
       </div>
@@ -418,7 +418,7 @@
             </a>
           </li>
           <li class="footer__nav-item">
-            <a href="#attendance" class="footer__nav-link">
+            <a href="#lecture" class="footer__nav-link">
               Відвідування
             </a>
           </li>
@@ -433,7 +433,7 @@
       <div class="grid__item grid__item--10-10 grid__item--tablet-4-4">
         <ul class="footer__nav-items">
           <li class="footer__nav-item">
-            <a href="#about-us" class="footer__nav-link">
+            <a href="#subscribe" class="footer__nav-link">
               Про нас
             </a>
           </li>
@@ -443,7 +443,7 @@
             </a>
           </li>
           <li class="footer__nav-item">
-            <a href="#blog" class="footer__nav-link">
+            <a href="#subscribe" class="footer__nav-link">
               Блог
             </a>
           </li>
