--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,129 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page">
+    <header class="header">
+      <div class="container">
+        <nav class="nav header__nav">
+          <a href="#menu">
+            <div class="nav__menu"></div>
+          </a>
+
+          <a href="#" class="nav__logo">
+            <h1 class="logo">
+              NA
+              <br>
+              MU
+            </h1>
+          </a>
+
+          <div class="box"></div>
+
+        </nav>
+
+        <div class="grid grid--desktop">
+          <div class="grid__item grid__item--3-7">
+            <h2 class="header__title">
+              ХУДОЖ<span class="header__title--end">НІЙ</span>
+              <br>
+              МУЗЕЙ
+            </h2>
+          </div>
+
+          <div class="grid__item grid__item--8-12">
+            <div class="header__photo">
+              <img
+                src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+                alt=""
+                class="header__photo--image"
+              >
+            </div>
+
+          </div>
+
+          <div class="grid__item grid__item--3-5">
+            <a href="#" class="button header__button">
+              <div class="button__text">
+                КВИТКИ
+              </div>
+
+              <div class="button__arrow">
+                <img src="./images/arrow.png" alt="arrow">
+              </div>
+            </a>
+
+          </div>
+        </div>
+
+
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <a href="#" class="menu__logo">
+            <h1 class="logo">
+              NA
+              <br>
+              MU
+            </h1>
+          </a>
+
+          <ul class="menu__list">
+            <li class="menu__li">
+              <a href="" class="menu__link">Галерея</a>
+            </li>
+
+            <li class="menu__li">
+              <a href="" class="menu__link">Виставки та події</a>
+            </li>
+
+            <li class="menu__li">
+              <a href="" class="menu__link">Відвідування</a>
+            </li>
+
+            <li class="menu__li">
+              <a href="" class="menu__link">Стати нашим другом</a>
+            </li>
+
+            <li class="menu__li">
+              <a href="" class="menu__link">Про Нас</a>
+            </li>
+
+            <li class="menu__li">
+              <a href="" class="menu__link">Магазин</a>
+            </li>
+
+            <li class="menu__li">
+              <a href="" class="menu__link">Блог</a>
+            </li>
+
+            <li class="menu__li">
+              <a href="" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+
+          <a href="#search-bar">
+            <div class="menu__loop"></div>
+          </a>
+
+        </div>
+      </div>
+
+      </a>
+    </nav>
   </body>
 </html>
