--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body class="page">
-    <header class="header">
+    <header class="header" hidden>
+      <div class="header__photo"></div>
       <div class="container">
         <nav class="nav header__nav">
           <a href="#menu">
@@ -35,40 +36,22 @@
 
         </nav>
 
-        <div class="grid grid--desktop">
-          <div class="grid__item grid__item--3-7">
-            <h2 class="header__title">
-              ХУДОЖ<span class="header__title--end">НІЙ</span>
-              <br>
-              МУЗЕЙ
-            </h2>
+        <h2 class="header__title">
+          ХУДОЖ<span class="header__title--end">НІЙ</span>
+          <br>
+          МУЗЕЙ
+        </h2>
+
+
+        <a href="#" class="button header__button">
+          <div class="button__text">
+            КВИТКИ
           </div>
 
-          <div class="grid__item grid__item--8-12">
-            <div class="header__photo">
-              <img
-                src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
-                alt=""
-                class="header__photo--image"
-              >
-            </div>
-
+          <div class="button__arrow">
+            <img src="./images/arrow.png" alt="arrow">
           </div>
-
-          <div class="grid__item grid__item--3-5">
-            <a href="#" class="button header__button">
-              <div class="button__text">
-                КВИТКИ
-              </div>
-
-              <div class="button__arrow">
-                <img src="./images/arrow.png" alt="arrow">
-              </div>
-            </a>
-
-          </div>
-        </div>
-
+        </a>
 
       </div>
     </header>
@@ -127,5 +110,39 @@
 
       </a>
     </nav>
+
+    <main class="page__content" hidden>
+      <section class="section page__section">
+        <div class="container">
+          <h3 class="section__title">Актуальні події</h3>
+          <div class="place place__actual">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--1-9">
+                <div class="place__photo">
+                  <img
+                    src="./images/Rectangle 2.2.png"
+                    alt="picture"
+                    class="place__photo"
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="section page__section" id="gallery">
+        <div class="container">
+          <h3 class="section__title">Галерея</h3>
+
+          <div class="place gallery__place">
+
+          </div>
+
+        </div>
+
+      </section>
+    </main>
   </body>
 </html>
