--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
       </a>
     </nav>
 
-    <main class="page__content" hidden>
+    <main class="page__content">
       <section class="section page__section">
         <div class="container">
           <h3 class="section__title">Актуальні події</h3>
